# reliz-protocol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
deploy/: ghost-server.conf  ghost-server.service  ghost.sh  install.sh
ghost-client/: Cargo.toml
ghost-client/src/: fragment.rs  lib.rs  main.rs  tunnel.rs  web.rs
ghost-client/static/: index.html
ghost-client/tests/: e2e_test.rs
ghost-common/: Cargo.toml
ghost-common/src/: lib.rs  stealth.rs  token.rs
ghost-crypto/: Cargo.toml
ghost-crypto/src/: lib.rs
ghost-reality/: Cargo.toml
ghost-reality/src/: ja4.rs  lib.rs  reality_server.rs  tls_wrapper.rs
ghost-server/: Cargo.toml
ghost-server/src/: handler.rs  lib.rs  main.rs
ghost-tun/: Cargo.toml
ghost-tun/src/: device.rs  lib.rs  socks5.rs  tcp_session.rs
ghost_flutter/: .gitignore  README.md  pubspec.yaml
ghost_flutter/android/app/: build.gradle.kts
ghost_flutter/android/app/src/main/: AndroidManifest.xml
ghost_flutter/android/app/src/main/kotlin/com/example/ghost_proxy/: MainActivity.kt
ghost_flutter/android/app/src/main/kotlin/com/example/reliz_protocol/: GhostTunBridge.kt  MainActivity.kt  RelizVpnService.kt  Tun2Socks.kt
ghost_flutter/lib/: main.dart
ghost_flutter/lib/config/: reliz_config.dart
ghost_flutter/lib/models/: proxy_state.dart
ghost_flutter/lib/screens/: home_screen.dart
ghost_flutter/lib/services/: proxy_service.dart  theme.dart  vpn_controller.dart
ghost_flutter/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
ghost_flutter/rust/: Cargo.toml
ghost_flutter/rust/src/: api.rs  frb_generated.rs
ghost_flutter/test/: widget_test.dart
reliz-app/: extract_ndk.py  package-lock.json  package.json
reliz-app/src-tauri/: Cargo.toml  tauri.conf.json
reliz-app/src-tauri/capabilities/: default.json
reliz-app/src-tauri/icons/: icon.icns
reliz-app/src-tauri/src/: lib.rs  main.rs
reliz-app/ui/: index.html
scripts/: README.md  build-tun2socks-android.sh  fetch-prebuilt-tun2socks.ps1
