[package]
name = "ghost-flutter-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
ghost-common = { path = "../../ghost-common" }
# Внутренний крейт ghost-client переэкспортирован под именем `reliz_client`
# (ребрендинг Ghost → Reliz). Алиас даёт стабильное имя для FRB-моста,
# не ломая остальной workspace.
reliz_client = { package = "ghost-client", path = "../../ghost-client" }
