[package]
name = "ghost-flutter-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
ghost-common = { path = "../../ghost-common" }
ghost-tun = { path = "../../ghost-tun" }
# Внутренний крейт ghost-client переэкспортирован под именем `reliz_client`
# (ребрендинг Ghost → Reliz). Алиас даёт стабильное имя для FRB-моста,
# не ломая остальной workspace.
reliz_client = { package = "ghost-client", path = "../../ghost-client" }
# Runtime crate, парный к `flutter_rust_bridge_codegen` 2.12.x.
# Версия должна совпадать с CLI, которым сгенерирован `frb_generated.rs`.
flutter_rust_bridge = "=2.12.0"
