[package]
name = "reliz-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "reliz_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ghost-client = { path = "../../ghost-client" }
ghost-common = { path = "../../ghost-common" }
